--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | HoloProyect</title>
+    <title>HoloProyect</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">HoloProyect</div>
+        <div id="unity-build-title">Webgl_unity</div>
       </div>
     </div>
     <script>
@@ -62,7 +62,7 @@
         frameworkUrl: buildUrl + "/hxtend.framework.js.gz",
         codeUrl: buildUrl + "/hxtend.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "mdconsgroup",
         productName: "HoloProyect",
         productVersion: "0.1",
         showBanner: unityShowBanner,
